Anonymous | Login | 2021-01-19 02:48 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0028214 | Community | [OCCT] OCCT:Modeling Algorithms | public | 2016-12-13 10:58 | 2017-09-29 16:25 | ||||
Reporter | msv | ||||||||
Assigned To | apn | ||||||||
Priority | normal | Severity | tweak | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.1.0 | ||||||||
Target Version | [OCCT] 7.2.0 | Fixed in Version | [OCCT] 7.2.0 | ||||||
Summary | 0028214: Make the class GeomPlate_BuildPlateSurface accept Adaptor3d_HCurve instead of Adaptor3d_HCurveOnSurface | ||||||||
Description | The constructor of the class GeomPlate_BuildPlateSurface that takes a set of curves expect them in the form of an array of Adaptor3d_HCurveOnSurface (Handle(GeomPlate_HArray1OfHCurveOnSurface)). Inside, it just use them to create objects of type GeomPlate_CurveConstraint that takes Adaptor3d_HCurve. So, it is needed to change constructor so that it accepted an array of Adaptor3d_HCurve. Correspondingly, the file GeomPlate_HArray1OfHCurveOnSurface.hxx is to be replaced with GeomPlate_HArray1OfHCurve.hxx. This bug was created in the footsteps of the post on the forum https://dev.opencascade.org/index.php?q=node/1180. [^] | ||||||||
Steps To Reproduce | Not needed. | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | |||||||||
![]() |
|
(0061601) msv (developer) 2016-12-13 11:10 edited on: 2016-12-13 11:13 |
Recently the similar correction was done in the class GeomPlate_CurveConstraint. See the bug "#27718: Class GeomPlate_CurveConstraint contains two same constructors" for details. |
(0061602) msv (developer) 2016-12-13 11:12 |
The excerpt from 27718 description: Constructors GeomPlate_CurveConstraint(const Handle(Adaptor3d_HCurveOnSurface)& Boundary, const Standard_Integer Order, const Standard_Integer NPt = 10, const Standard_Real TolDist = 0.0001, const Standard_Real TolAng = 0.01, const Standard_Real TolCurv = 0.1); and GeomPlate_CurveConstraint(const Handle(Adaptor3d_HCurve)& Boundary, const Standard_Integer Tang, const Standard_Integer NPt = 10, const Standard_Real TolDist = 0.0001); are considered as same. Main difference is in several default parameters only. Handle(Adaptor3d_HCurveOnSurface) and Handle(Adaptor3d_HCurve) are same types indeed because Adaptor3d_HCurveOnSurface is inherited from Adaptor3d_HCurve. |
(0061716) git (administrator) 2016-12-16 11:41 |
Branch CR28214 has been created by nbv. SHA-1: b38b1bfd2a214ee7086f9e0c2d62382b3127bb13 Detailed log of new commits: Author: nbv Date: Fri Dec 16 10:37:05 2016 +0300 0028214: Make the class GeomPlate_BuildPlateSurface accept Adaptor3d_HCurve instead of Adaptor3d_HCurveOnSurface Now, GeomPlate_BuildPlateSurface accepts base class Adaptor3d_HCurve and of course array of Adaptor3d_HCurve. Classes GeomPlate_Array1OfHCurveOnSurface and GeomPlate_HArray1OfHCurveOnSurface have been renamed to GeomPlate_Array1OfHCurve and GeomPlate_HArray1OfHCurve correspondingly. |
(0061717) nbv (developer) 2016-12-16 11:42 |
Dear Mikhail, Please review CR28214 branch. |
(0061721) msv (developer) 2016-12-16 12:00 |
Reviewed. |
(0061752) git (administrator) 2016-12-16 16:51 |
Branch CR28214 has been updated forcibly by mkv. SHA-1: d2ec10a1a060a99c11ea570e99e1bcdfa1cce905 |
(0061865) mkv (tester) 2016-12-19 16:34 |
Dear BugMaster, Branch CR28214 was rebased on current master of occt git-repository. SHA-1: d2ec10a1a060a99c11ea570e99e1bcdfa1cce905 |
(0061866) mkv (tester) 2016-12-19 16:34 |
Dear BugMaster, Branch CR28214 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: d2ec10a1a060a99c11ea570e99e1bcdfa1cce905 There are following compilation errors: Linux: http://jenkins-test-07.nnov.opencascade.com:8080/view/CR28214-master/job/CR28214-master-Products-Debian70-64-qt-samples-linux/2/parsed_console/ [^] src/DocumentSSP.cxx:72:50: fatal error: GeomPlate_HArray1OfHCurveOnSurface.hxx: No such file or directory Windows: http://jenkins-test-07.nnov.opencascade.com:8080/view/CR28214-master/job/CR28214-master-OCCT-Windows-64-VC10-mfc-samples/2/parsed_console/ [^] 3>d:\install\cr28214-master\windows-64-vc10-opt\occt\samples\mfc\standard\02_modeling\src\stdafx.h(111): fatal error C1083: Cannot open include file: 'GeomPlate_HArray1OfHCurveOnSurface.hxx': No such file or directory http://jenkins-test-07.nnov.opencascade.com:8080/view/CR28214-master/job/CR28214-master-Products-Windows-64-VC10-csharp-samples/2/parsed_console/ [^] occtypes.i(367) : Error: Unable to find 'GeomPlate_Array1OfHCurveOnSurface.hxx' occtypes.i(476) : Error: Unable to find 'GeomPlate_HArray1OfHCurveOnSurface.hxx' http://jenkins-test-07.nnov.opencascade.com:8080/view/CR28214-master/job/CR28214-master-Products-Windows-64-VC10-java-samples/2/parsed_console/ [^] occtypes.i(310) : Error: Unable to find 'GeomPlate_Array1OfHCurveOnSurface.hxx' occtypes.i(400) : Error: Unable to find 'GeomPlate_HArray1OfHCurveOnSurface.hxx' http://jenkins-test-07.nnov.opencascade.com:8080/view/CR28214-master/job/CR28214-master-Products-Windows-64-VC10-qt-samples-windows/2/parsed_console/ [^] 1>src\DocumentSSP.cxx(72): fatal error C1083: Cannot open include file: 'GeomPlate_HArray1OfHCurveOnSurface.hxx': No such file or directory Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 63 (63 on master) Windows: 0 (0 on master) MacOS : 1120 Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 93080646 / 92889185 [+0.21%] Total CPU difference: 21653.70000000007 / 21640.54000000027 [+0.06%] products component : Total MEMORY difference: 30090022 / 30067682 [+0.07%] Total CPU difference: 5338.499999999967 / 5288.109999999972 [+0.95%] Testing on Windows: occt component : Total MEMORY difference: 58511591 / 58518712 [-0.01%] Total CPU difference: 19848.896435698643 / 19818.897443398673 [+0.15%] products component : Total MEMORY difference: 20894159 / 20861060 [+0.16%] Total CPU difference: 5281.070652799994 / 5204.302560699983 [+1.48%] There are no differences in images found by testdiff. |
(0061867) mkv (tester) 2016-12-19 16:35 |
Dear nbv, Branch CR28214 has been rejected due to: - compilation errors |
(0061875) msv (developer) 2016-12-19 17:02 |
Dear Nikolay. Please add info about changes into upgrade guide. |
(0062434) git (administrator) 2017-01-10 09:56 |
Branch CR28214_1 has been created by nbv. SHA-1: 8ff7889963fd89d9778e12e12547dabbe7a22f00 Detailed log of new commits: Author: nbv Date: Fri Dec 16 10:37:05 2016 +0300 0028214: Make the class GeomPlate_BuildPlateSurface accept Adaptor3d_HCurve instead of Adaptor3d_HCurveOnSurface Now, GeomPlate_BuildPlateSurface accepts base class Adaptor3d_HCurve and of course array of Adaptor3d_HCurve. Classes GeomPlate_Array1OfHCurveOnSurface and GeomPlate_HArray1OfHCurveOnSurface have been renamed to GeomPlate_Array1OfHCurve and GeomPlate_HArray1OfHCurve correspondingly. Documentation has been updated. |
(0062435) nbv (developer) 2017-01-10 09:57 |
Dear Mikhail, Please review CR28214_1 branch. |
(0062505) git (administrator) 2017-01-11 16:52 |
Branch CR28214_1 has been updated by nbv. SHA-1: 30db14462feeee95706d2a29ef241dab30f78603 Detailed log of new commits: Author: nbv Date: Wed Jan 11 16:52:34 2017 +0300 Correction in documentation. |
(0062507) msv (developer) 2017-01-11 16:58 |
Reviewed. |
(0062544) mkv (tester) 2017-01-12 17:34 |
Dear BugMaster, Branch CR28214_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 30db14462feeee95706d2a29ef241dab30f78603 There are following compilation errors: Linux: http://jenkins-test-07.nnov.opencascade.com:8080/view/CR28214_1-master/job/CR28214_1-master-Products-Debian70-64-qt-samples-linux/1/parsed_console/ [^] src/DocumentSSP.cxx:72:50: fatal error: GeomPlate_HArray1OfHCurveOnSurface.hxx: No such file or directory Windows: http://jenkins-test-07.nnov.opencascade.com:8080/view/CR28214_1-master/job/CR28214_1-master-Products-Windows-64-VC10-csharp-samples/1/parsed_console/ [^] occtypes.i(367) : Error: Unable to find 'GeomPlate_Array1OfHCurveOnSurface.hxx' occtypes.i(476) : Error: Unable to find 'GeomPlate_HArray1OfHCurveOnSurface.hxx' 1>c1xx : fatal error C1083: Cannot open source file: 'occcsharp_wrap.cxx': No such file or directory http://jenkins-test-07.nnov.opencascade.com:8080/view/CR28214_1-master/job/CR28214_1-master-Products-Windows-64-VC10-java-samples/1/parsed_console/ [^] occtypes.i(310) : Error: Unable to find 'GeomPlate_Array1OfHCurveOnSurface.hxx' occtypes.i(400) : Error: Unable to find 'GeomPlate_HArray1OfHCurveOnSurface.hxx' http://jenkins-test-07.nnov.opencascade.com:8080/view/CR28214_1-master/job/CR28214_1-master-Products-Windows-64-VC10-qt-samples-windows/2/parsed_console/ [^] 1>src\DocumentSSP.cxx(72): fatal error C1083: Cannot open include file: 'GeomPlate_HArray1OfHCurveOnSurface.hxx': No such file or directory Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 63 (63 on master) Windows: 0 (0 on master) MacOS : 1139 Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 93313621 / 92893916 [+0.45%] Total CPU difference: 21467.220000000227 / 21506.1200000003 [-0.18%] products component : Total MEMORY difference: 30325725 / 30395462 [-0.23%] Total CPU difference: 5334.009999999982 / 5312.789999999971 [+0.40%] Testing on Windows: occt component : Total MEMORY difference: 58644624 / 58649007 [-0.01%] Total CPU difference: 18956.52391539864 / 19749.742200098677 [-4.02%] products component : Total MEMORY difference: 21152038 / 21118126 [+0.16%] Total CPU difference: 5195.4105036999645 / 5256.094892699988 [-1.15%] There are no differences in images found by testdiff. |
(0062545) mkv (tester) 2017-01-12 17:34 |
Dear nbv, Branch CR28214_1 has been rejected due to: - compilation errors |
(0062561) nbv (developer) 2017-01-13 11:07 |
Dear Mikhail, Please review the branch CR28214prod for OCCT-products repository. |
(0062562) msv (developer) 2017-01-13 11:13 |
It's OK. |
(0062571) mkv (tester) 2017-01-13 13:39 |
Dear BugMaster, Branch CR28214prod from products git-repository was compiled on Linux, MacOS and Windows platforms on Release mode. SHA-1: c865b11b617db7c519675465493c0d5f79c4d389 There are following compilation errors: Linux: http://jenkins-test-07.nnov.opencascade.com:8080/view/CR28214_1-master/job/CR28214_1-master-Products-Debian70-64-qt-samples-linux/3/parsed_console/ [^] src/DocumentSSP.cxx:708:35: error: variable 'Adaptor3d_CurveOnSurface ConS' has initializer but incomplete type src/DocumentSSP.cxx:710:82: error: invalid use of incomplete type 'class Adaptor3d_HCurveOnSurface' In file included from ../../../../OCCT/inc/GeomPlate_HSequenceOfCurveConstraint.hxx:20:0, from ../../../../OCCT/inc/GeomPlate_BuildPlateSurface.hxx:24, from src/DocumentSSP.cxx:79: ../../../../OCCT/inc/GeomPlate_CurveConstraint.hxx:28:7: error: forward declaration of 'class Adaptor3d_HCurveOnSurface' Windows: http://jenkins-test-07.nnov.opencascade.com:8080/view/CR28214_1-master/job/CR28214_1-master-Products-Windows-64-VC10-qt-samples-windows/3/parsed_console/ [^] 1>src\DocumentSSP.cxx(708): error C2079: 'ConS' uses undefined class 'Adaptor3d_CurveOnSurface' 1>src\DocumentSSP.cxx(708): error C2078: too many initializers 1>src\DocumentSSP.cxx(708): error C2440: 'initializing' : cannot convert from 'opencascade::handle<T>' to 'int' 1> with 1> [ 1> T=GeomAdaptor_HSurface 1> ] 1> No user-defined-conversion operator available that can perform this conversion, or the operator cannot be called 1>src\DocumentSSP.cxx(710): error C2514: 'Adaptor3d_HCurveOnSurface' : class has no constructors |
(0062572) mkv (tester) 2017-01-13 13:40 |
Dear nbv, Branch CR28214prod has been rejected due to: - compilation errors |
(0062580) mkv (tester) 2017-01-13 16:09 |
Dear BugMaster, Branch CR28214prod from products git-repository was compiled on Linux, MacOS and Windows platforms on Release mode. SHA-1: 56279c99b3eb03b2668fcfc356503df3221e7a96 There are not compilation errors on Linux, MacOS and Windows platforms on Release mode. Number of compiler warnings: products component : Linux: 63 (63 on master) Windows: 0 (0 on master) MacOS : 1139 |
(0062582) mkv (tester) 2017-01-13 16:09 |
Dear BugMaster, Branch CR28214_1 from occt git-repository and CR28214prod from products git-repository are TESTED. |
(0063560) git (administrator) 2017-02-08 11:32 |
Branch CR28214 has been deleted by kgv. SHA-1: d2ec10a1a060a99c11ea570e99e1bcdfa1cce905 |
(0063597) git (administrator) 2017-02-08 11:35 |
Branch CR28214_1 has been deleted by kgv. SHA-1: 30db14462feeee95706d2a29ef241dab30f78603 |
![]() |
|||
occt: master 465e6861
Timestamp: 2017-01-19 13:02:29 Author: nbv Committer: apn [ Details ] [ Diff ] |
0028214: Make the class GeomPlate_BuildPlateSurface accept Adaptor3d_HCurve instead of Adaptor3d_HCurveOnSurface Now, GeomPlate_BuildPlateSurface accepts base class Adaptor3d_HCurve and of course array of Adaptor3d_HCurve. Classes GeomPlate_Array1OfHCurveOnSurface and GeomPlate_HArray1OfHCurveOnSurface have been renamed to GeomPlate_Array1OfHCurve and GeomPlate_HArray1OfHCurve correspondingly. Documentation has been updated. Correction in documentation. |
||
mod - dox/dev_guides/upgrade/upgrade.md | [ Diff ] [ File ] | ||
mod - dox/user_guides/modeling_algos/modeling_algos.md | [ Diff ] [ File ] | ||
mod - samples/mfc/standard/02_Modeling/src/ModelingDoc.cpp | [ Diff ] [ File ] | ||
mod - samples/mfc/standard/02_Modeling/src/StdAfx.h | [ Diff ] [ File ] | ||
mod - src/BRepTest/BRepTest_FillingCommands.cxx | [ Diff ] [ File ] | ||
mod - src/ChFi3d/ChFi3d_Builder_CnCrn.cxx | [ Diff ] [ File ] | ||
mod - src/GeomPlate/FILES | [ Diff ] [ File ] | ||
mod - src/GeomPlate/GeomPlate_BuildPlateSurface.cxx | [ Diff ] [ File ] | ||
mod - src/GeomPlate/GeomPlate_BuildPlateSurface.hxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2016-12-13 10:58 | msv | New Issue | |
2016-12-13 10:58 | msv | Assigned To | => msv |
2016-12-13 11:08 | msv | Assigned To | msv => nbv |
2016-12-13 11:08 | msv | Status | new => assigned |
2016-12-13 11:09 | msv | Relationship added | related to 0027718 |
2016-12-13 11:10 | msv | Note Added: 0061601 | |
2016-12-13 11:12 | msv | Note Added: 0061602 | |
2016-12-13 11:13 | msv | Note Edited: 0061601 | View Revisions |
2016-12-16 11:41 | git | Note Added: 0061716 | |
2016-12-16 11:42 | nbv | Note Added: 0061717 | |
2016-12-16 11:42 | nbv | Assigned To | nbv => msv |
2016-12-16 11:42 | nbv | Status | assigned => resolved |
2016-12-16 12:00 | msv | Note Added: 0061721 | |
2016-12-16 12:00 | msv | Assigned To | msv => bugmaster |
2016-12-16 12:00 | msv | Status | resolved => reviewed |
2016-12-16 12:53 | mkv | Assigned To | bugmaster => mkv |
2016-12-16 16:51 | git | Note Added: 0061752 | |
2016-12-19 16:34 | mkv | Note Added: 0061865 | |
2016-12-19 16:34 | mkv | Note Added: 0061866 | |
2016-12-19 16:35 | mkv | Note Added: 0061867 | |
2016-12-19 16:35 | mkv | Assigned To | mkv => nbv |
2016-12-19 16:35 | mkv | Status | reviewed => assigned |
2016-12-19 16:35 | mkv | Test case number | => Not needed |
2016-12-19 17:02 | msv | Note Added: 0061875 | |
2017-01-10 09:56 | git | Note Added: 0062434 | |
2017-01-10 09:57 | nbv | Note Added: 0062435 | |
2017-01-10 09:57 | nbv | Assigned To | nbv => msv |
2017-01-10 09:57 | nbv | Status | assigned => resolved |
2017-01-11 16:52 | git | Note Added: 0062505 | |
2017-01-11 16:58 | msv | Note Added: 0062507 | |
2017-01-11 16:58 | msv | Assigned To | msv => bugmaster |
2017-01-11 16:58 | msv | Status | resolved => reviewed |
2017-01-11 17:05 | mkv | Assigned To | bugmaster => mkv |
2017-01-12 17:34 | mkv | Note Added: 0062544 | |
2017-01-12 17:34 | mkv | Note Added: 0062545 | |
2017-01-12 17:34 | mkv | Assigned To | mkv => nbv |
2017-01-12 17:34 | mkv | Status | reviewed => assigned |
2017-01-13 11:07 | nbv | Note Added: 0062561 | |
2017-01-13 11:07 | nbv | Assigned To | nbv => msv |
2017-01-13 11:07 | nbv | Status | assigned => resolved |
2017-01-13 11:13 | msv | Note Added: 0062562 | |
2017-01-13 11:13 | msv | Assigned To | msv => mkv |
2017-01-13 11:13 | msv | Status | resolved => reviewed |
2017-01-13 13:39 | mkv | Note Added: 0062571 | |
2017-01-13 13:40 | mkv | Note Added: 0062572 | |
2017-01-13 13:40 | mkv | Assigned To | mkv => nbv |
2017-01-13 13:40 | mkv | Status | reviewed => assigned |
2017-01-13 13:46 | nbv | Assigned To | nbv => msv |
2017-01-13 13:46 | nbv | Status | assigned => resolved |
2017-01-13 13:47 | nbv | Assigned To | msv => mkv |
2017-01-13 13:47 | nbv | Status | resolved => reviewed |
2017-01-13 16:09 | mkv | Note Added: 0062580 | |
2017-01-13 16:09 | mkv | Note Added: 0062582 | |
2017-01-13 16:09 | mkv | Assigned To | mkv => bugmaster |
2017-01-13 16:09 | mkv | Status | reviewed => tested |
2017-01-20 16:12 | apn | Changeset attached | => occt master 465e6861 |
2017-01-20 16:12 | apn | Assigned To | bugmaster => apn |
2017-01-20 16:12 | apn | Status | tested => verified |
2017-01-20 16:12 | apn | Resolution | open => fixed |
2017-02-08 11:32 | git | Note Added: 0063560 | |
2017-02-08 11:35 | git | Note Added: 0063597 | |
2017-03-03 17:41 | bugmaster | Target Version | 7.3.0 => 7.2.0 |
2017-03-06 11:51 | bugmaster | Target Version | 7.2.0 => 7.3.0 |
2017-05-19 15:36 | abv | Target Version | 7.3.0 => 7.2.0 |
2017-09-29 16:18 | aiv | Fixed in Version | => 7.2.0 |
2017-09-29 16:25 | aiv | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |